Fluxus : (C) 2008 Dave Griffiths : dave at pawfal dot org : www.pawfal.org

0.17

* added render to texture support to pixel primitives,
  (with-pixels-renderer), (pixels-renderer-activate)
* added sphere mapping, (hint-sphere-map)
* added FreeFrame GL support

0.16

* fixed autodetect of GLSL and multitexturing 
* frame-hooks
* fixed orientations and texture coordinates to be more consistent
* particle depth sorting
* tiled-framedump for massive resolutions
* moved install out of plt collects
* (mouse-wheel)
* GLSL and multitexturing on by default
* new documentation pdf
* lots of fluxa stability fixes
* internal depth sort on particles
* added (build-type) and (build-extruded-type)
* added Perlin noise and Simplex noise functions (noise), (snoise)
* lots of fixes to fluxa to make it stable
* (reparent)
* (get-global-transform)
* (bb-intersect)
* inline GLSL code
* F4 execute s expr
* added stippled lines, (hint-wire-stippled), (line-pattern)
* added (set-cursor)
* new example game, fluxus invaders
* colour support for NURBS primitives
* OSX application

0.15

* ported to PLT 3.99
* removed scheme versions of obj import/export
* midi support - gabor papp
* added fluxa - an audio synth
* added text opacity on F10 and F11
* fixed saveas dialog, cursor and shift works
* inlined most of dada.h (~5% speedup)
* renamed build-line to build-ribbon
* more meshes to play with (used in frisbee examples)
* shadows now work on immediate mode objects
* key release fixed in drflux
* multi views/cameras
* better random functions with randomness.ss
* frisbee: a functional reactive game engine using frtime
* added -lang (not how useful this is now)
* added -fs and -x for fullscreen and run script at startup
* fixed crashes to do with garbage collection using threads
* sped up pdata-get/ref
* made (backfacecull) local state rather than global
* added (hint-cull-ccw)
* documentation changed so we can have functions in different files sharing the same section