@@ -1,4 +1,3 @@
-
 ;; fluxus scratchpad effects example
 ;; press f9 to switch on and off scratchpad effects
 ;;
@@ -7,7 +6,7 @@
 (spawn-task
     (lambda ()
         ;; jiggle
-        (set! fluxus-scratchpad-effect-jiggle-size (/ (mouse-x) (vx (get-screen-size))))
+        (set! fluxus-scratchpad-effect-jiggle-size 0)
 
         ;; wave
         (set! fluxus-scratchpad-effect-wave-size 0)
@@ -19,7 +18,13 @@
         (set! fluxus-scratchpad-effect-ripple-center-x (mouse-x))
         (set! fluxus-scratchpad-effect-ripple-center-y (mouse-y))
         (set! fluxus-scratchpad-effect-ripple-wavelength 1)
-        (set! fluxus-scratchpad-effect-ripple-speed 2.0))
+        (set! fluxus-scratchpad-effect-ripple-speed 2.0)
+
+        ;; swirl
+        (set! fluxus-scratchpad-effect-swirl-size 15)
+        (set! fluxus-scratchpad-effect-swirl-center-x (mouse-x))
+        (set! fluxus-scratchpad-effect-swirl-center-y (mouse-y))
+        (set! fluxus-scratchpad-effect-swirl-rotation (* 10 (sin (time)))))
 
     'scratchpad-effect-task)
 
