@@ -6,6 +6,7 @@ Fluxus : (C) 2008 Dave Griffiths : dave at pawfal dot org : www.pawfal.org
   (with-pixels-renderer), (pixels-renderer-activate)
 * added sphere mapping, (hint-sphere-map)
 * added FreeFrame GL support
+* added scratchpad effects (jiggle, wave, ripple, swirl)
 
 0.16
 
